[project]
name = "medagent4curebench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "httpx[socks]>=0.28.1",
    "langchain[openai]>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.5",
    "pydantic>=2.11.7",
    "sentence-transformers>=5.1.0",
    "tooluniverse>=0.2.0",
]
